--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,25 @@
 {
+  "framework": null,
   "builds": [
     {
-      "src": "vercel_handler.py",
-      "use": "@vercel/python"
+      "src": "Assignment1/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize":  "15mb", "runtime":  "python3.9" }
     }
   ],
+
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "vercel_handler.py"
+      "dest": "Assignment1/wsgi.py",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, DELETE, PUT"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "Assignment1/wsgi.py"
     }
   ]
 }
