--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 Django>=5.2
 daphne
-
+asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.1
+httplib2==0.22.0
+idna==3.10
+pillow==11.1.0
+postmarker==1.0
+psycopg2-binary==2.9.10
+pyparsing==3.2.3
+pytz==2025.2
+requests==2.32.3
+sqlparse==0.5.3
+urllib3==2.4.0
