vercel（deploy admin css）

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,18 @@
 {
-  "framework": null,
   "builds": [
     {
-      "src": "Assignment1/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize":  "15mb", "runtime":  "python3.9" }
+      "src": "vercel_handler.py",
+      "use": "@vercel/python"
     }
   ],
-
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "Assignment1/wsgi.py",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, DELETE, PUT"
-      }
+      "src": "/static/(.*)",
+      "dest": "/staticfiles/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "Assignment1/wsgi.py"
+      "dest": "vercel_handler.py"
     }
   ]
 }
