--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/staticfiles/$1"
+      "dest": "static/$1"
     },
     {
       "src": "/(.*)",
